--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "assessoryangularjs",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "gzippo": "^0.2.0",
+    "express": "^3.5.0"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
